Update course pages

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -82,10 +82,6 @@ table thead th {
   background: govuk-colour("green");
 }
 
-.empty {
-  color: govuk-colour("dark-grey");
-}
-
 .status {
   background: govuk-colour("light-grey");
   padding: 20px;
@@ -120,10 +116,6 @@ table thead th {
 
 .add-top-margin {
   margin-top: $govuk-gutter / 2;
-}
-
-.form-control-xsmall {
-  width: 120px;
 }
 
 .form-control-small {
@@ -206,13 +198,6 @@ dl.aligned.course-part-tasks dd {
   }
 }
 
-.govuk-prefix-input {
-  @include govuk-font($size: 19, $weight: bold);
-  bottom: 7px;
-  left: 15px;
-  position: absolute;
-}
-
 .autocomplete__menu {
   @include govuk-font(19);
 }
@@ -247,6 +232,10 @@ dl.aligned.course-part-tasks dd {
   a {
     font-weight: normal;
   }
+}
+
+.govuk-summary-list__value--empty {
+  color: govuk-colour("dark-grey");
 }
 
 .govuk-summary-list__value--truncate {
